--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,40 @@
 #nome do meu workflow
-name: terceira-pipeline
+name: CI-CD
 on: 
   push: 
     branches: ["main"]
   workflow_dispatch:  
 jobs:
-  primeiro-job:
-    name: "Meu Primeiro Job"
+   CI:
     runs-on: ubuntu-latest
     steps:
-      # Action    
-      - name: "Minha primeira ação"
-        run: echo "Hello World !!!"
-      - name: "Segunda ação"
-        run: |
-          echo "Você criou o seu segundo workflow!!"
-          echo "Parabéns !!!"
+    - name: Obtendo o código
+      uses: actions/checkout@v4.1.5
+    ##Criação do login no Docker
+    - name: Autenticação no Docker Hub
+      uses: docker/login-action@v3.3.0
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+   CD: 
+    runs-on: ubuntu-latest
+    steps:
+    - name: Obtendo o código
+      uses: actions/checkout@v4.1.5
+    - name: Configuração de contexto do Cluster Kubernetes  
+      uses: azure/k8s-set-context@v4.0.1
+      with:
+       method: kubeconfig
+       kubeconfig: ${{ secrets.K8S_CONFIG }}
+    - name: Execução do Manifesto
+      uses: Azure/k8s-deploy@v5
+      with: 
+        manifests: |
+          ./k8s/deployment.yaml
+        images: | 
+         marcelopaglione/conversao-temperatura:tagname${{ github.run_number }}   
+    
+    
+
           
           
