--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,23 +16,24 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-   #CD: 
-   # runs-on: ubuntu-latest
-   # steps:
-   # - name: Obtendo o código
-   #   uses: actions/checkout@v4.1.5
-   # - name: Configuração de contexto do Cluster Kubernetes  
-   #   uses: azure/k8s-set-context@v4.0.1
-   #   with:
-   #    method: kubeconfig
-   #    kubeconfig: ${{ secrets.K8S_CONFIG }}
-   # - name: Execução do Manifesto
-   #   uses: Azure/k8s-deploy@v5
-   #   with: 
-   #     manifests: |
-   #       ./k8s/deployment.yaml
-   #     images: | 
-   #      marcelopaglione/conversao-temperatura:tagname${{ github.run_number }}   
+   CD: 
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+    - name: Obtendo o código
+      uses: actions/checkout@v4.1.5
+    - name: Configuração de contexto do Cluster Kubernetes  
+      uses: azure/k8s-set-context@v4.0.1
+      with:
+       method: kubeconfig
+       kubeconfig: ${{ secrets.K8S_CONFIG }}
+    - name: Execução do Manifesto
+      uses: Azure/k8s-deploy@v5
+      with: 
+        manifests: |
+          ./k8s/deployment.yaml
+        images: | 
+         marcelopaglione/conversao-temperatura:latest   
     
     
 
